--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -21,5 +21,6 @@
     </filter>
     <logging>
         <log type="coverage-clover" target="tmp/coverage.xml"/>
+        <log type="coverage-html" target="tmp/report" lowUpperBound="35" highLowerBound="70"/>
     </logging>
 </phpunit>
