--- a/.gitattributes
+++ b/.gitattributes
@@ -2,9 +2,13 @@
 # https://www.kernel.org/pub/software/scm/git/docs/gitattributes.html
 
 # Ignore all test and documentation with "export-ignore".
+/.env.dist          export-ignore
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
+/.styleci.yml       export-ignore
 /.travis.yml        export-ignore
-/phpunit.xml.dist   export-ignore
 /.scrutinizer.yml   export-ignore
+/phpunit.xml.dist   export-ignore
+/docs               export-ignore
 /tests              export-ignore
+/tmp                export-ignore
