More exceptions to be more accurate and rename main class to avoid repetition

--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     ],
     "require": {
         "php": ">=7.1",
+        "ext-http": "*",
         "ext-json": "*",
         "guzzlehttp/guzzle": "~6.0"
 
