--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -20,6 +20,7 @@
         </whitelist>
     </filter>
     <logging>
-        <log type="coverage-clover" target="tmp/coverage.xml"/>
+        <log type="coverage-clover" target="./tmp/coverage.xml"/>
+        <log type="coverage-html" target="./tmp/report"/>
     </logging>
 </phpunit>
