Fix Scrutinizer issue and active analysis

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -6,6 +6,10 @@ checks:
 
 build:
     nodes:
+        analysis:
+            tests:
+                override:
+                    - php-scrutinizer-run
         coverage:
             tests:
                 override:
