--- a/.env.dist
+++ b/.env.dist
@@ -1,2 +1,2 @@
-GOOGLE_API_KEY = 'YOUR_GOOGLE_API_KEY'
-GOOGLE_SIGNATURE = 'YOUR_GOOGLE_SIGNATURE'
+GOOGLE_API_KEY = 'GOOGLE_API_KEY'
+GOOGLE_SIGNATURE = 'GOOGLE_API_SIGNATURE'
