Create a Dockerfile in order to execute library without installation and add xdebug as dev requirement

--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
 
     },
     "require-dev": {
+        "ext-xdebug": "*",
         "phpunit/phpunit": "^7.4",
         "vlucas/phpdotenv": "^2.4"
     },
