--- a/.qovery.yml
+++ b/.qovery.yml
@@ -1,9 +1,9 @@
 application:
-  name: google-streetview
+  name: google-street-view
   project: google-street-view
 routers:
 - name: main
   routes:
-  - application_name: google-streetview
+  - application_name: google-street-view
     paths:
     - /
