--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "require-dev": {
         "ext-xdebug": "*",
         "phpunit/phpunit": "^7.4",
-        "vlucas/phpdotenv": "^2.4"
+        "vlucas/phpdotenv": "^2.4",
+        "twig/twig": "^3.0"
     },
     "autoload": {
         "psr-4": {
