--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,4 @@ php:
 before_script:
   - composer install --prefer-source --no-interaction --dev
 
-script: vendor/bin/phpunit
+script: composer run-script test
